deploy/custom/helm/webshoapigw/configmap.yml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-cm
  labels:
    app: webshopapigw
data:
  envoy.yaml: | 
    admin:
    access_log_path: "/dev/null"
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8001
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 80
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: eshop_backend_route
                virtual_hosts:
                - name: eshop_backend
                  domains:
                  - "*"
                  routes:
                  - name: "c-short"
                    match:
                      prefix: "/c/"
                    route:
                      auto_host_rewrite: true
                      prefix_rewrite: "/catalog-api/"
                      cluster: catalog
                  - name: "c-long"
                    match:
                      prefix: "/catalog-api/"
                    route:
                      auto_host_rewrite: true
                      cluster: catalog
                  - name: "o-short"
                    match:
                      prefix: "/o/"
                    route:
                      auto_host_rewrite: true
                      prefix_rewrite: "/ordering-api/"
                      cluster: ordering
                  - name: "o-long"
                    match:
                      prefix: "/ordering-api/"
                    route:
                      auto_host_rewrite: true
                      cluster: ordering
                  - name: "h-long"
                    match:
                      prefix: "/hub/notificationhub"
                    route:
                      auto_host_rewrite: true
                      cluster: signalr-hub
                      timeout: 300s
                      upgrade_configs:
                        upgrade_type: "websocket"
                        enabled: true
                  - name: "b-short"
                    match:
                      prefix: "/b/"
                    route:
                      auto_host_rewrite: true
                      prefix_rewrite: "/basket-api/"
                      cluster: basket
                  - name: "b-long"
                    match:
                      prefix: "/basket-api/"
                    route:
                      auto_host_rewrite: true
                      cluster: basket
                  - name: "cp-short"
                    match:
                      prefix: "/cp/"
                    route:
                      auto_host_rewrite: true
                      prefix_rewrite: "/coupon-api/"
                      cluster: coupon
                  - name: "cp-long"
                    match:
                      prefix: "/coupon-api/"
                    route:
                      auto_host_rewrite: true
                      prefix_rewrite: "/coupon-api/"
                      cluster: coupon
                  - name: "l-short"
                    match:
                      prefix: "/l/"
                    route:
                      auto_host_rewrite: true
                      prefix_rewrite: "/loyalty-api/"
                      cluster: coupon
                  - name: "l-long"
                    match:
                      prefix: "/loyalty-api/"
                    route:
                      auto_host_rewrite: true
                      cluster: coupon
                  - name: "agg"
                    match:
                      prefix: "/"
                    route:
                      auto_host_rewrite: true
                      prefix_rewrite: "/"
                      cluster: shoppingagg
              http_filters:
              - name: envoy.router
              access_log:
              - name: envoy.file_access_log
                filter:
                  not_health_check_filter: {}
                config:
                  json_format:
                    time: "%START_TIME%"
                    protocol: "%PROTOCOL%"
                    duration: "%DURATION%"
                    request_method: "%REQ(:METHOD)%"
                    request_host: "%REQ(HOST)%"
                    path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                    response_flags: "%RESPONSE_FLAGS%"
                    route_name: "%ROUTE_NAME%"
                    upstream_host: "%UPSTREAM_HOST%"
                    upstream_cluster: "%UPSTREAM_CLUSTER%"
                    upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%"
                  path: "/tmp/access.log"
      clusters:
      - name: shoppingagg
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: webshoppingagg
            port_value: 80
      - name: catalog
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: catalog-api
            port_value: 80
      - name: basket
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: basket-api
            port_value: 80
      - name: ordering
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: ordering-api
            port_value: 80
      - name: signalr-hub
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: ordering-signalrhub
            port_value: 80
      - name: coupon
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: coupon-api
            port_value: 80
