deploy/custom/helm/webshoapigw/envoy.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - name: "c-short"
                match:
                  prefix: "/c/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/catalog-api/"
                  cluster: catalog
              - name: "c-long"
                match:
                  prefix: "/catalog-api/"
                route:
                  auto_host_rewrite: true
                  cluster: catalog
              - name: "b-short"
                match:
                  prefix: "/b/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/basket-api/"
                  cluster: basket
              - name: "b-long"
                match:
                  prefix: "/basket-api/"
                route:
                  auto_host_rewrite: true
                  cluster: basket
              - name: "o-short"
                match:
                  prefix: "/o/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/ordering-api/"
                  cluster: ordering
              - name: "o-long"
                match:
                  prefix: "/ordering-api/"
                route:
                  auto_host_rewrite: true
                  cluster: ordering
              - name: "h-long"
                match:
                  prefix: "/hub/notificationhub"
                route:
                  auto_host_rewrite: true
                  cluster: signalr-hub
                  timeout: 300s
                  upgrade_configs:
                    upgrade_type: "websocket"
                    enabled: true
              - name: "cp-short"
                match:
                  prefix: "/cp/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/coupon-api/"
                  cluster: coupon
              - name: "cp-long"
                match:
                  prefix: "/coupon-api/"
                route:
                  auto_host_rewrite: true
                  cluster: coupon
              - name: "l-short"
                match:
                  prefix: "/l/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/coupon-api/"
                  cluster: coupon
              - name: "l-long"
                match:
                  prefix: "/loyalty-api/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/coupon-api/"
                  cluster: coupon
  clusters:
    - name: catalog
      connect_timeout: 3s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: catalog
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: catalog-api
                  port_value: 80
    - name: basket
      connect_timeout: 3s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: basket
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: basket-api
                  port_value: 80
    - name: ordering
      connect_timeout: 3s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: ordering
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: orders-api
                  port_value: 80
    - name: signalr-hub
      connect_timeout: 3s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: signalr-hub
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: orderssignalrhub
                  port_value: 80
    - name: coupon
      connect_timeout: 3s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: coupon
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: coupon-api
                  port_value: 80
